# ollama-marshal

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  marshal.example.yaml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review.yml  claude-security.yml
docs/specs/: 2026-06-25-boot-resilience-and-dryrun-program-id-design.md
examples/: com.user.ollama-serve-q4.plist  com.user.ollama-serve-q8.plist
scripts/: README.md  dryrun.py
src/ollama_marshal/: __init__.py  __main__.py  audit.py  cli.py  config.py  dashboard.py  doctor.py  lifecycle.py  memory.py  openai_compat.py  queue.py  registry.py  retry.py  routing.py  scheduler.py  server.py  stream.py
tests/: conftest.py  test_audit.py  test_cli.py  test_config.py  test_config_instances.py  test_dashboard.py  test_doctor.py  test_integration.py  test_lifecycle.py  test_memory.py  test_openai_compat.py  test_prod_restart_fallback.py  test_queue.py  test_registry.py  test_retry.py  test_routing.py  test_scheduler.py  test_server.py  test_server_admin.py  test_stream.py  test_version_skew.py
tests/integration/: _admin_token.py  _fault_proxy.py  _version_skew.py  conftest.py  test_audit.py  test_doctor.py  test_error_propagation.py  test_fail_fast.py  test_infra_subprocess.py  test_live_pressure.py  test_load.py  test_memory_behavior.py  test_multi_instance.py  test_num_ctx.py  test_registry_validation.py  test_retry.py  test_shutdown_ownership.py  test_smoke.py  test_v064.py
